code/borrow_error.txt
error[E0502]: cannot borrow `vector` as mutable because it is also borrowed as immutable
 --> failing_borrow.rs:4:16
  |
3 |     let element = &vector[2];
  |                    ------ immutable borrow occurs here
4 |     let last = vector.pop();
  |                ^^^^^^ mutable borrow occurs here
5 | }
  | - immutable borrow ends here

error: aborting due to previous error
